--- a/index.css
+++ b/index.css
@@ -37,6 +37,7 @@ h1 {
     background-color: hsla(333, 80%, 67%, 0.1);
     margin-bottom: 10px;
     padding: 8px 0;
+    padding-top: 16px;
     width: 340px;
     border-radius: 5px;
 }
