--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'League Spartan', sans-serif;
-    padding-bottom: 200px;
+    /* padding-bottom: 200px; */
 }
 
 main {
@@ -50,7 +50,7 @@ h1 {
 
 .user-message {
     background-color: hsl(300, 43%, 22%);
-    padding: 20px;
+    padding: 30px 20px;
     width: 300px;
     border-radius: 5px;
     margin-bottom: 10px;
@@ -83,5 +83,15 @@ h1 {
     color: hsl(0, 0%, 100%);
     margin-top: 20px;
     font-size: 15px;
+    line-height: 20px;
 }
 
+.attribution {
+    font-size: 11px;
+    text-align: center;
+    position: absolute; 
+    bottom: -650px;
+}
+.attribution a {
+color: hsl(228, 45%, 44%);
+}
