--- a/index.css
+++ b/index.css
@@ -2,57 +2,84 @@
 
 body {
     font-family: 'League Spartan', sans-serif;
-    /* padding-bottom: 200px; */
+    padding-left: 30px;
 }
 
 main {
-    width: 380px;
+    padding-top: 30px;
+    margin-bottom: 30px;
     display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+}
+
+.c {
+    display: inline-block;
+    /* margin-right: 300px; */
 }
 
 h1 {
-    text-align: center;
-    width: 250px;
+    width: 300px;
     color: hsl(300, 43%, 22%);
-    margin-top: 70px;
+    margin-top: 0;
+    font-size: 45px;
 }
 
 .feedback {
-    text-align: center;
+    width: 370px;
     font-size: 15px;
-    width: 279px;
     color: hsl(303, 10%, 53%);
     margin-top: 0;
     margin-bottom: 30px;
+    line-height: 20px;
 }
 
-.big {
-    margin-bottom: 40px;
+.ratings-report {
+    display: inline-block;
+    white-space: nowrap;
+    margin-right: 20px;
+
+    /* position: relative; */
 }
 
 .container {
     text-align: center;
     background-color: hsla(333, 80%, 67%, 0.1);
-    margin-bottom: 10px;
-    padding: 8px 0;
-    padding-top: 16px;
+    margin-bottom: 20px;
+    padding: 12px 10px;
     width: 340px;
-    border-radius: 5px;
+    border-radius: 5px;   
+}
+
+.in-guru {
+    margin-left: 50px;
+}
+
+.in-besttech {
+    margin-left: 100px;
 }
 
 .rated-in {
     color: hsl(300, 43%, 22%);
     font-weight: 500;
+    vertical-align: center;
+    margin-left: 30px;
+}
+
+
+.user {
+    /* display: inline-block; */
+    /* flex-direction: row;
+    justify-content: space-between; */
+    /* margin-top: 60px; */
+    margin-right: 10px;
 }
 
 .user-message {
     background-color: hsl(300, 43%, 22%);
-    padding: 30px 20px;
+    padding: 40px 35px;
     width: 300px;
     border-radius: 5px;
+    display: inline-block;
     margin-bottom: 10px;
 }
 
@@ -86,12 +113,83 @@ h1 {
     line-height: 20px;
 }
 
-.attribution {
-    font-size: 11px;
-    text-align: center;
-    position: absolute; 
-    bottom: -650px;
+.irene {
+    margin-top: 30px;
 }
-.attribution a {
-color: hsl(228, 45%, 44%);
+
+.anne {
+    margin-top: 60px;
+}
+
+section {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media (max-width: 760px) {
+    main {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    h1 {
+        text-align: center;
+        width: 255px;
+        color: hsl(300, 43%, 22%);
+        font-size: 33px;
+        margin-left: 15px;
+    }
+    
+    .feedback {
+        text-align: center;
+        font-size: 15px;
+        width: 270px;
+        color: hsl(303, 10%, 53%);
+        margin-top: 0;
+        margin-bottom: 30px;
+        margin-left: 15px;
+    }
+
+    .container {
+        text-align: center;
+        background-color: hsla(333, 80%, 67%, 0.1);
+        margin-bottom: 10px;
+        padding: 8px 0;
+        padding-top: 16px;
+        width: 295px;
+        border-radius: 5px;
+    }
+    
+    .rated-in {
+        color: hsl(300, 43%, 22%);
+        font-weight: 500;
+        display: block;
+        margin-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .in-guru,
+    .in-besttech {
+        margin: 0;
+    }
+
+    .user-message {
+        width: 240px;
+        padding: 0;
+        padding: 28px;
+    }
+   
+    
+    section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 50px;
+    }
+
+    .irene, 
+    .anne {
+        margin-top: 0;
+    }
+
 }
