--- a/index.css
+++ b/index.css
@@ -156,7 +156,7 @@ section {
         margin-bottom: 10px;
         padding: 8px 0;
         padding-top: 16px;
-        width: 295px;
+        width: 325px;
         border-radius: 5px;
     }
     
@@ -171,10 +171,11 @@ section {
     .in-guru,
     .in-besttech {
         margin: 0;
+        margin-bottom: 10px;
     }
 
     .user-message {
-        width: 240px;
+        width: 260px;
         padding: 0;
         padding: 28px;
     }
