--- a/index.css
+++ b/index.css
@@ -126,6 +126,19 @@ section {
     justify-content: space-between;
 }
 
+.attribution { 
+    font-size: 11px; 
+    text-align: center; 
+    margin-top: 20px;
+    margin-bottom: 20px;
+    /* position: absolute; 
+    bottom: -100px; */
+}
+
+.attribution a {
+color: hsl(228, 45%, 44%); 
+}
+
 @media (max-width: 760px) {
     main {
         flex-direction: column;
