--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 body {
     font-family: 'League Spartan', sans-serif;
     padding-left: 30px;
+    background-image: url("images/bg-pattern-top-desktop.svg"), url("images/bg-pattern-bottom-desktop.svg");
 }
 
 main {
