--- a/index.css
+++ b/index.css
@@ -141,6 +141,10 @@ color: hsl(228, 45%, 44%);
 }
 
 @media (max-width: 760px) {
+    body {
+        background-image: url("images/bg-pattern-top-mobile.svg"), url("images/bg-pattern-bottom-mobile.svg");
+    }
+
     main {
         flex-direction: column;
         align-items: center;
